[metadata]
name = mars_importer
version = 1.0.0
author = Gibson Xavier
author-email = gxavier@arago.de
home-page = https://github.com/althonos/mars_importer
description = Inject MARS files into HIRO graph
long_description = Tool to import MARS model data created by the Java Excel to MARS utility for HIRO 6
license = MIT
license-file = LICENSE
platform = any
python_requires = >= 3.0.*
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[bdist_rpm]
release = 1
packager = Gibson Xavier <gxavier@arago.de>
use_bzip2 = 1
python = python3
requires = python-docopt
           python-lxml
           python-requests
           python-gevent
           python-jsonschema
post_install = install.sh

[sdist]
formats = gztar

[bdist_wheel]
universal = 1

